--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -22,6 +22,11 @@
 	--backgroundOpacity: .65;
 	--backgroundCode: rgba(0,0,0,.5);
 	--backgroundName: rgba(0,0,0,.5);
+	
+	--transparencycolor: 0,0,0;
+	--transparencyalpha: 0.15;
+	--messagetransparency: 0.5;
+	--usechatbubbles: calc(var(--messagetransparency) / (var(--messagetransparency) + 0.00000000000000000000001));
 }
 
 .appMount-2yBXZl,
