--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -6,18 +6,18 @@
 @import url("https://codedotspectra.github.io/themes/core/settings-icons.css");
 
 :root {
-    --themeColor1: #36D1DC;
-    --themeColor2: #5B86E5;
-    --customFont: 'Roboto', sans-serif;
+    --themeColor1: #FF0000FF;
+    --themeColor2: #900000FF;
+    --customFont: 'Open Sans';
     --font-display: var(--customFont);
-    --homeImage: url('https://limeshark.dev/img/n/icon.png');
+    --homeImage: url('https://kurou-kun.github.io/share/ashuramaru/discord-logo.png');
     --homeImageSize: cover;
     --backgroundColor: #0d0d0d;
-    --backgroundImage: url('https://limeshark.dev/img/n/background.jpg');
+    --backgroundImage: url('https://kurou-kun.github.io/share/discord/ashuramaru/Ashuramaru-Background.png');
     --backgroundPosition: center;
     --backgroundSize: cover;
     --backgroundRepeat: no-repeat;
-    --backgroundBlur: 100px;
+    --backgroundBlur: 10px;
     --backgroundOpacity: .65;
     --backgroundCode: rgba(0,0,0,.5);
     --backgroundName: rgba(0,0,0,.5);
