--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -2438,6 +2438,30 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
     background: transparent;
 }
 
+/* Defining */
+#app-mount .chat-2ZfjoI,		/*	chat	container			*/
+#app-mount .container-3wLKDe,	/* 	chat	upport			*/
+#app-mount .container-3XgAHv,	/* 	chat	thread sidebar 	*/
+#app-mount .wrapper-3HVHpV,	/* 	chat	messages loading 	*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Title */
 html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr > div.wordmark-2u86JB {
 	display: block !important;
@@ -2459,9 +2483,11 @@ html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalR
 	transform: unset !important;
 	animation: unset !important;
 }
+
 html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr > div.wordmark-2u86JB > * {
 	display: none !important;
 }
+
 html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr > div.wordmark-2u86JB::before {
 	content: "" !important;
 	background: rgb(125,125,125) !important;
@@ -2481,6 +2507,7 @@ html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalR
 	transform: unset !important;
 	animation: unset !important;
 }
+
 html:only-child > head + body div.typeWindows-2-g3UY.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr > div.wordmark-2u86JB::after {
 	content: "" !important;
 	background: rgb(125,125,125) !important;
@@ -2518,9 +2545,11 @@ html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUES
 	pointer-events: none !important;
 	z-index: -1 !important;
 }
+
 html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUESM.layers-1YQhyW > div.layer-86YKbF.baseLayer-W6S8cY + div.layer-86YKbF > div.standardSidebarView-E9Pc3j > div.sidebarRegion-1VBisG > div.sidebarRegionScroller-FXiQOh.thin-31rlnD.scrollerBase-_bVAAt.fade-1R6FHN > nav.sidebar-nqHbhN > div.side-2ur1Qk > div.info-3pQQBb {
 	position: relative !important;
 }
+
 html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUESM.layers-1YQhyW > div.layer-86YKbF.baseLayer-W6S8cY + div.layer-86YKbF > div.standardSidebarView-E9Pc3j > div.sidebarRegion-1VBisG > div.sidebarRegionScroller-FXiQOh.thin-31rlnD.scrollerBase-_bVAAt.fade-1R6FHN > nav.sidebar-nqHbhN > div.side-2ur1Qk > div.info-3pQQBb::after {
 	content: "Custome by" !important;
 	font-size: 12px !important;
@@ -2540,6 +2569,7 @@ html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUES
 	transform: unset !important;
 	animation: unset !important;
 }
+
 html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUESM.layers-1YQhyW > div.layer-86YKbF.baseLayer-W6S8cY + div.layer-86YKbF > div.standardSidebarView-E9Pc3j > div.sidebarRegion-1VBisG > div.sidebarRegionScroller-FXiQOh.thin-31rlnD.scrollerBase-_bVAAt.fade-1R6FHN > nav.sidebar-nqHbhN > div.side-2ur1Qk > div.info-3pQQBb::before {
 	content: "Kurou" !important;
 	font-size: 12px !important;
@@ -2557,4 +2587,38 @@ html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg > div.layers-OrUES
 	right: unset !important;
 	transform: unset !important;
 	animation: unset !important;
+}
+
+/* Update Notice */
+html:only-child > head + body div.app-3xd6d0 > div.app-2CXKsg::before {
+	content: "Your Version of Custome Theme is outdated. Please download the latest Version:	https://mwittrien.github.io/downloader/?theme=BasicBackground" !important;
+	display: var(--version1_0_5, block) !important;
+	background-color: #4a90e2 !important;
+	box-shadow: 0 1px 5px 0 rgba(var(--transparencycolor), .3) !important;
+	color: var(--header-primary) !important;
+	flex-grow: 0 !important;
+	flex-shrink: 0 !important;
+	font-size: 14px !important;
+	font-weight: 500 !important;
+	height: 36px !important;
+	line-height: 36px !important;
+	opacity: 1 !important;
+	padding-left: 4px !important;
+	padding-right: 28px !important;
+	position: relative !important;
+	text-align: center !important;
+	visibility: unset !important;
+	white-space: pre !important;
+	top: 0 !important;
+	left: 0 !important;
+	bottom: unset !important;
+	right: unset !important;
+	max-width: unset !important;
+	min-width: unset !important;
+	max-height: unset !important;
+	min-height: unset !important;
+	transform: unset !important;
+	animation: unset !important;
+	z-index: 101 !important;
+	pointer-events: none !important;
 }
