--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -5,6 +5,7 @@
 @import url("https://monstrousdev.github.io/themes/addons/user-tags.css");
 @import url("https://discord-custom-covers.github.io/usrbg/dist/usrbg.css");
 @import url("https://codedotspectra.github.io/themes/core/settings-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
 
 /* Config */
 :root {
