--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -31,6 +31,7 @@
 	--guildchanneltransparency: 0.15;
 	--chatinputtransparency: 0.0;
 	--memberlisttransparency: 0.0;
+	--messagetransparency: 0.5;
 }
 
 .appMount-2yBXZl,
