--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -1826,15 +1826,15 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--maincolor);
-    background-image: linear-gradient(to bottom right, var(--maincolor), var(--secondarycolor));
+    background-color: var(--mentioncolor:);
+    background-image: linear-gradient(to bottom right, var(--mentioncolor:), var(--secondarycolor));
     z-index: -1;
     opacity: .15
 }
 
 .mentioned-Tre-dv:before {
-    background-color: var(--maincolor);
-    background-image: linear-gradient(to right, var(--maincolor), var(--secondarycolor))
+    background-color: var(--mentioncolor:);
+    background-image: linear-gradient(to right, var(--mentioncolor:), var(--secondarycolor))
 }
 
 .botTagInvert-1nKcq_,
@@ -4309,7 +4309,7 @@ html .typingindicator-folder {
 	-webkit-mask: url(https://discord.com/assets/cfbc2d8ceacfacf07850f986c8165195.svg) center/contain no-repeat;
 }
 
-/* ChanneldmS */
+/* Channeldms */
 
 .ChannelDms-channelmembers-wrap .ChannelDms-channelmembers-header {
 	background-color: rgba(var(--transparencycolor), var(--memberlisttransparency));
