--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -14,7 +14,7 @@
 	--secondarycolor: #900000FF;
 	--accentcolor: #FF0000FF;
 	--linkcolor: #FF0000FF;
-	--mentioncolor: #FF0000FF;
+	--mentioncolor #FF0000FF;
 	
 	/* Other Colors */
 	--textbrightest: 255,255,255;
@@ -1851,15 +1851,15 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--mentioncolor:);
-    background-image: linear-gradient(to bottom right, var(--mentioncolor:), var(--secondarycolor));
+    background-color: var(--mentioncolor);
+    background-image: linear-gradient(to bottom right, var(--mentioncolor), var(--secondarycolor));
     z-index: -1;
     opacity: .15
 }
 
 .mentioned-Tre-dv:before {
-    background-color: var(--mentioncolor:);
-    background-image: linear-gradient(to right, var(--mentioncolor:), var(--secondarycolor))
+    background-color: var(--mentioncolor);
+    background-image: linear-gradient(to right, var(--mentioncolor), var(--secondarycolor))
 }
 
 .botTagInvert-1nKcq_,
@@ -2569,7 +2569,7 @@ div[aria-label=GUILD_SETTINGS] .topPill-3DJJNV .themed-2-lozF.selected-g-kMVV.it
 	color: var(--header-secondary) !important;
 }
 
-/* Channelheader */
+/* Channel header */
 
 .container-ZMc96U.themed-Hp1KC_ {							/* header				themedcontainer						*/
 	box-shadow: 0 1px 0 rgba(var(--transparencycolor), .2), 0 1.5px 0 rgba(var(--transparencycolor), .05), 0 2px 0 rgba(var(--transparencycolor), .05);
