--- a/share/ashuramaru/custome.css
+++ b/share/ashuramaru/custome.css
@@ -14,7 +14,7 @@
 	--secondarycolor: #900000FF;
 	--accentcolor: #FF0000FF;
 	--linkcolor: #FF0000FF;
-	--mentioncolor #FF0000FF;
+	--mentioncolor: #FF0000FF;
 	
 	/* Other Colors */
 	--textbrightest: 255,255,255;
